--- a/app/globals.css
+++ b/app/globals.css
@@ -67,3 +67,17 @@
     @apply bg-background text-foreground;
   }
 }
+
+#map {
+  height: 100vh;
+}
+
+.leaflet-container {
+  height: 500px;
+  width: 100%;
+}
+
+.leaflet-div-icon {
+  background: transparent;
+  border: none;
+}
